Collection API Улучшения[#191225]