@@ -16,10 +16,10 @@ public class SortUserTest {
         User first = new User("bob", 20);
         User second = new User("ira", 10);
         User third = new User("vas", 15);
-        List<User> list = Arrays.asList(first, second, third);
+        List<User> list = List.of(first, second, third);
         TreeSet<User> treeSet = (TreeSet<User>) new SortUser().sort(list);
         List<User> result = new ArrayList<>(treeSet);
-        List<User> expected = Arrays.asList(second, third, first);
+        List<User> expected = List.of(second, third, first);
         assertThat(result, is(expected));
     }
     @Test
@@ -27,8 +27,8 @@ public class SortUserTest {
         User first = new User("sergei", 20);
         User second = new User("ivan", 10);
         User third = new User("vasya", 15);
-        List<User> result = new SortUser().sortNameLength(Arrays.asList(first, second, third));
-        List<User> expected = Arrays.asList(second, third, first);
+        List<User> result = new SortUser().sortNameLength(List.of(first, second, third));
+        List<User> expected = List.of(second, third, first);
         assertThat(result, is(expected));
     }
     @Test
@@ -37,8 +37,8 @@ public class SortUserTest {
         User second = new User("ivan", 10);
         User third = new User("sergei", 15);
         User fourth = new User("ivan", 12);
-        List<User> result = new SortUser().sortByAllFields(Arrays.asList(first, second, third, fourth));
-        List<User> expected = Arrays.asList(second, fourth, third, first);
+        List<User> result = new SortUser().sortByAllFields(List.of(first, second, third, fourth));
+        List<User> expected = List.of(second, fourth, third, first);
         assertThat(result, is(expected));
     }
 }
