@@ -21,7 +21,7 @@ public class StreamUsage {
     }
 
     public static void main(String[] args) {
-        List<Task> tasks = Arrays.asList(
+        List<Task> tasks = List.of(
                 new Task("Bug #1", 100),
                 new Task("Task #2", 100),
                 new Task("Bug #3", 100)
